tests/neg/phantom-trait-3.scala

class Boo1 extends Phantom // error

trait Boo2 extends Phantom // error

object Boo3 extends Phantom
